add a picture of one click pick

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
         <div class="portfolioItem">
           <div class="portfolioImage has-margin-right" data-aos="fade-right" data-aos-delay="300">
-            <img src="images/porfolioimg1.png" alt="porfolio image">
+            <img src="images/clickpick.png" alt="porfolio image">
           </div>
           <div class="portfolioDescription" data-aos="fade-left" data-aos-delay="900">
             <h6>Android development</h6>
@@ -145,10 +145,10 @@
                 <h6>Web develoment</h6>
                 <h1>Waitech</h1>
                 <p>An app that makes customer experience when ordering food faster and easier for both waiters and customers</p>
-                <a href="#">view project</a>
+                <a href="https://louis-crypto.github.io/Waitech.github.io/">view project</a>
               </div>
             <div class="portfolioImage" data-aos="fade-left" data-aos-delay="600">
-              <img src="images/porfolioimg1.png" alt="porfolio image">
+              <img src="images/waitechscreenshot.png" alt="porfolio image">
             </div>
           </div>
         <div class="portfolioItem">
@@ -161,7 +161,7 @@
                 <p>This is an organizational API that helps users be able to add employees to the database view news in a department and also view general 
                   news. 
                 </p>
-                <a href="#">view project</a>
+                <a href="https://github.com/Louis-crypto/organizational-API">view project</a>
               </div>
             </div>
       </div>
