--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section class="about" id="about">
     <div class="container">
       <div class="profileImage" data-aos="fade-right" data-aos-delay="300">
-        <img src="images/myPicture.JPG" alt="my picture"/>
+        <img src="images/myProfilePicture.png" alt="my picture" height="700"/>
       </div>
       <div class="aboutDetails" data-aos="fade-left" data-aos-delay="600">
         <div class="aboutHeading">
@@ -66,17 +66,17 @@
         <div class="socialMedia">
           <ul class="navList">
             <li>
-              <a href="#" class="iconLink">
+              <a href="https://web.facebook.com/home.php?ref=wizard" class="iconLink">
                 <i class="fa fa-facebook"></i>
               </a>
             </li>
             <li>
-                <a href="#" class="iconLink">
+                <a href="https://www.linkedin.com/in/louis-odhiambo-6118131a4/" class="iconLink">
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
               <li>
-                  <a href="#" class="iconLink">
+                  <a href="https://www.instagram.com/the_dark_programmer/?hl=en" class="iconLink">
                     <i class="fa fa-instagram"></i>
                   </a>
                 </li>
@@ -131,13 +131,13 @@
         </div>
         <div class="portfolioItem">
           <div class="portfolioImage has-margin-right" data-aos="fade-right" data-aos-delay="300">
-            <img src="images/clickpick.png" alt="porfolio image">
+            <img src="images/clickpick.png" alt="porfolio image" height="600" >
           </div>
           <div class="portfolioDescription" data-aos="fade-left" data-aos-delay="900">
             <h6>Android development</h6>
             <h1>One-click Pick</h1>
             <p>An e-commerce app that allows users to buy and sell things online</p>
-            <a href="#">view project</a>
+            <a href="https://github.com/Louis-crypto/One-click-pick">view project</a>
           </div>
         </div>
         <div class="portfolioItem">
@@ -148,12 +148,12 @@
                 <a href="https://louis-crypto.github.io/Waitech.github.io/">view project</a>
               </div>
             <div class="portfolioImage" data-aos="fade-left" data-aos-delay="600">
-              <img src="images/waitechscreenshot.png" alt="porfolio image">
+              <img src="images/waitechscreenshot.png" alt="porfolio image" height="400">
             </div>
           </div>
         <div class="portfolioItem">
               <div class="portfolioImage has-margin-right" data-aos="fade-right" data-aos-delay="300">
-                <img src="images/porfolioimg1.png" alt="porfolio image">
+                <img src="images/apiImage.jpg" alt="porfolio image">
               </div>
               <div class="portfolioDescription" data-aos="fade-left" data-aos-delay="1200">
                 <h6>Application programming Interface(API)</h6>
@@ -173,15 +173,39 @@
           <h1>Contacts</h1>
           <h6>How you can reach me</h6>
         </div>
-        <form action="">
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name" placeholder="Enter your name" required>
-          <label for="email">Email</label>
-          <input type="text" id="email" name="email" placeholder="Enter email address" required>
-          <label for="message">Message</label>
-          <textarea name="message" id="message" cols="10" rows="10"></textarea>
-          <input type="submit" value="submit">
+        <div id="mc_embed_signup">
+          <form action="https://github.us4.list-manage.com/subscribe/post?u=eac891b60e262bfa875d07ece&amp;id=4a6e58f600"
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+            target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <input type="text" placeholder="NAME..." name="NAME" id="name">
+              <input type="email" placeholder="Email..." name="EMAIL" id="email">
+              <input type="text" placeholder="Your message..." name="MESSAGE" id="message">
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                name="b_eac891b60e262bfa875d07ece_4a6e58f600" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Submit" name="submit" id="submit" class="button"></div>
+        <!-- </div> -->
         </form>
+      </div>
+      <script type='text/javascript'>
+        (function ($) {
+          window.fnames = new Array();
+          window.ftypes = new Array();
+          fnames[0] = 'EMAIL';
+          ftypes[0] = 'email';
+          fnames[2] = 'NAME';
+          ftypes[2] = 'text';
+          fnames[1] = 'MESSAGE';
+          ftypes[1] = 'text';
+        }(jQuery));
+        var $mcj = jQuery.noConflict(true);
+      </script>
       </div>
   </section>
 
