--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <i class="fa fa-mobile" style="font-size:80px;"></i>
           </div>
           <h1>Android development</h1>
-          <p>I am a focused and creative android developer who focuses on poviding real world soluitions on time and within budget</p>
+          <p>I am a focused and creative android(mobile) developer who focuses on poviding real world soluitions on time and within budget</p>
         </div>
         <div class="skill" data-aos="fade-right" data-aos-delay="300">
             <div class="iconContainer">
