add links to social media icons

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="socialMedia">
           <ul class="navList">
             <li>
-              <a href="https://web.facebook.com/home.php?ref=wizard" class="iconLink">
+              <a href="https://web.facebook.com/louis.odhiambo.98/" class="iconLink">
                 <i class="fa fa-facebook"></i>
               </a>
             </li>
@@ -74,7 +74,7 @@
                 </a>
               </li>
               <li>
-                  <a href="https://www.instagram.com/the_dark_programmer/?hl=en" class="iconLink">
+                  <a href="https://www.instagram.com/louis.odhiambo/" class="iconLink">
                     <i class="fa fa-instagram"></i>
                   </a>
                 </li>
@@ -97,14 +97,14 @@
             <i class="fa fa-mobile" style="font-size:80px;"></i>
           </div>
           <h1>Android development</h1>
-          <p>I am a focused and creative android(mobile) developer who focuses on poviding real world soluitions on time and within budget</p>
+          <p>I am a focused and creative android(mobile) developer who focuses on providing real world soluitions on time and within budget</p>
         </div>
         <div class="skill" data-aos="fade-right" data-aos-delay="300">
             <div class="iconContainer">
               <i class="fa fa-laptop" style="font-size:80px;"></i>
             </div>
             <h1>Web development</h1>
-            <p>I can also do web developmemnt using java and spark a the front-end framework. I have interractted with many other front-end frameworks
+            <p>I can also do web developmemnt using java and spark as the front-end framework. I have interractted with many other front-end frameworks
               such as angular.js.
             </p>
           </div>
