add media queries for my porfolio to make it responsive

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="landingText">
       <h1>LOUIS ODHIAMBO</h1>
       <h6>android developer</h6>
-  \~  </div>
+   </div>
   </header>
 
   <section class="about" id="about">
@@ -211,7 +211,7 @@
     <div class="up" id="up">
       <i class="fa fa-angle-up"></i>
     </div>
-    <p>&copy 2020 Louis Odhiambo</p>
+    <p>&copy 2021 Louis Odhiambo</p>
   </footer>
 
 
